--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -17,8 +17,10 @@
         position: relative;
     }
 
-    &__img:last-child {
-        margin-bottom: 30px;
+    &__img {
+        &:last-child {
+            margin-bottom: 30px;
+        }
     }
 }
 
