--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -23,12 +23,16 @@
 
 @media screen and (max-width: 375px){
     .header {
-        &__mobile--btn {
-            display: block;
+        &__mobile {
+            &--btn {
+                display: block;
+            }
         }
 
-        &__logo--close {
-            display: none;
+        &__logo {
+            &--close {
+                display: none;
+            }
         }
         &__wrapper {
             padding-bottom: 50px;
