--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -32,16 +32,11 @@
         display: inline-block;
         text-align: left;
         margin-bottom: 23px;
-
-        &--active {
+        border: 1px solid transparent;
+        
+        &:hover{
             .border();
-            // border: 1px solid @sub_main_color;
-            // border-radius: 50%;
         }
-        // &:hover{
-        //     border: 1px solid @sub_main_color;
-        //     border-radius: 50%;
-        // }
     }
     &__link {
         text-decoration: none;
